---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: ????
  Changes:
    - Made Bob Plates an optional dependcy
  Bugfixes:
    - Fixed recipes that are nil to fix conflicts with other mods
    - Titanium concrete brick fixes
    - Locale fixes for angels-solid-sodium-floride
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 2026-01-11
  Features:
    - Added setting "Warehouses require previous tier" to toggle on/off the inclusion of previous tiers of warehouses in warehouse recipes
  Changes:
    - Added productivity to Copper Tungsten and Tungsten Carbide plate recipes
    - Changed recipe Tungsten Carbide Smelting 3 to produce less hydrogen gas
    - Changed recipe Copper Tungsten Smelting to use copper powder instead of copper ingots
    - Corrected spelling of internal item and recipe names 'angels-solid-sodium-floride[-#]' to 'angels-solid-sodium-fluoride[-#]'
  Bugfixes:
    - Fixed molten copper tungsten locale
    - Fixed tungsten powder number tiers
    - Fixed that Angel's Warehouse recipes mk1 were not included the basic warehouse as in ingredient
    - Fixed that Angel's Warehouse recipes mk2-mk4 were not correctly including the previous tier as an ingredient
    - Fixed that numerous buildings were not correctly getting the intended number of module slots
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2026-01-10
  Features:
    - Added migrations for prototype name changes 
  Changes:
    - Switched over to using Angel's Zinc Powder
  Bugfixes:
    - Fixed crash when loading old saves
    - Fixed incorrect technology name for Mad Clown's
    - Fixed ingredients not being added by bob's add recipe
    - Fixed copper tungsten smelting's technology icon having the wrong size