@@ -7,6 +7,8 @@ Date: ????
     - Fixed recipes that are nil to fix conflicts with other mods
     - Titanium concrete brick fixes
     - Locale fixes for angels-solid-sodium-floride
+    - Fixed serveral techs mising higher tech packs from pervious tech
+    - Fixed serveral items missing crafting tints 
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.2
 Date: 2026-01-11
